data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1392.wast
;; 3. **Test: Backward Branch to Loop with Excess Operands**:    - **Description**: Define a loop with `br_if` attempting to branch back to the loop start while having more operands than required by the loop's input signature.    - **Constraint Checked**: Ensures that the loop's input signature correctly dictates the number of operands needed.    - **Relation to Incorrect Branch Target Resolution**: Verifies that excessive operands don't cause the branch to resolve incorrectly, maintaining the correct control flow.

(assert_invalid
  (module
    (func $test-loop-backward-branch-excess-operands
      (loop $my_loop (result i32)
        i32.const 1
        i32.const 2
        i32.const 3
        br_if 0
      )
    )
  )
  "type mismatch"
)